objects/References__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Won?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Reference_Requested__c</fullName>
        <label>Date Reference Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reference_Used__c</fullName>
        <label>Date Reference Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProspectName3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect_Name2__c</fullName>
        <label>Prospect Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Used in marketing to identify references for new accounts and how often they are used.</description>
    <label>References</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>References Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Rogers_Support_References</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LHMA_Post_Launch_References</fullName>
        <filterScope>Queue</filterScope>
        <label>LHMA Post Launch</label>
        <queue>LHMA_Post_Launch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>